--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,8 @@ body {
   line-height: 34px;
   color:black;
   background: url("../images/concrete_seamless.png");
+  height: 100vh;
+  width: 100vw;
 }
 
 * {
@@ -102,11 +104,11 @@ footer {
   padding: 30px 0;
   clear: both;
   font-size: 12px;
-  color: #fff;
-  color: #ccc;
+  color:orange;
+  color: White;
   text-align: center;
   background: #666;
-  border-top: 8px solid #4aaaa5;
+  border-top: 8px solid #666;
   height: 50px;
 }
 
@@ -214,4 +216,19 @@ input[type=submit] {
   cursor: pointer;
   background: darkblue;
   border: 0 none;
+}
+
+.responsive {
+  width: 100%;
+  height: auto;
+}
+
+.header {
+  overflow: hidden;
+  background-color: #f1f1f1;
+  padding: 20px 10px;
+}
+
+#button {
+  Color: blue
 }
